# seisviz

./: LICENSE  README.md  setup.cfg
seisviz/: __init__.py  load_seismic.py  save_seismic_slice.py  seismic_slice_plot.py  seismic_volume_plot.py  utils.py
