[metadata]
name = seisviz
version = 0.1.0
author = Promise Ekeh
author_email = promisekeh1@gmail.com
description = A lightweight Python library for visualizing 3D seismic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Promisekeh/seisviz
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Geology

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21
    matplotlib>=3.4
    segyio>=1.9

[options.package_data]
* = *.npy, *.sgy, *.segy

[options.extras_require]
dev =
    pytest
    black
